--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,14 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
+    "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": [
+    "dist",
+    "node_modules"
+  ]
 }
