chore: update repository url

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ClydeDz/add-demo-npm.git"
+    "url": "git+https://github.com/tymmesyde/bilboquet.git"
   },
   "author": "tymmesyde",
   "license": "ISC",
